--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,17 +25,18 @@ android {
 }
 
 dependencies {
-    compile 'com.google.android.gms:play-services-maps:9.0.0'
-    //compile com.google.android.gms:play-services-location:9.0.0
+    compile 'com.google.android.gms:play-services-maps:10.2.0'
+    compile 'com.google.android.gms:play-services-location:10.2.0'
 
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
 
-    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.1.2'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     compile 'net.bozho.easycamera:easycamera:0.0.1:aar@aar'
